--- a/public/index.html
+++ b/public/index.html
@@ -10,15 +10,15 @@
       content="We're Waiting you to our restaurant. Check Little Lemon Website!"
     />
     <meta name="og:title" content="Little Lemon"/>
-    <meta name="og:description" content="We're Waiting you to our restaurant. Check Little Lemon Website!"/>"
-    <meta name="og:image" content="" />
+    <meta name="og:description" content="We're Waiting you to our restaurant. Check Little Lemon Website!"/>
+    <meta name="og:image"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-1Zr5r5nnbTR5o5/QCpAukyWRh3U6DeuUdysN61Z/lX9QYcYRlN/7V8yr/Vz/AbdxVH5+LdjNNgZ8xhnZ+9YJrA==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
